[metadata]
name = hexmap-isfyx
version = 0.0.1
author = Isak Fyksen
author_email = isak@obsidian.no
description = A hexagonal map creation tool for tabletop RPGs
long_description = file : README.md
long_description_content_type = text/markdown
url = https://github.com/isfyx/HexMap
project_urls = 
    Bug Tracker = https://github.com/isfyx/HexMap
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software Licens
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src